# network-programming

./: README.md
coursework/: CMakeLists.txt  README.md
coursework/client/: main.c
coursework/client/include/: udp_client.h
coursework/client/src/: udp_client_destroy.c  udp_client_init.c  udp_client_recv_msg.c  udp_client_run.c  udp_client_send_msg.c
coursework/client/src/threads/: udp_client_recv_thread.c  udp_client_send_thread.c
coursework/reports/: отчёт_Терновский_ИП213.docx
coursework/server/: main.c
coursework/server/include/: udp_server.h
coursework/server/src/: get_client_ip.c  get_client_port.c  udp_server_destroy.c  udp_server_has_client.c  udp_server_init.c  udp_server_recv_msg.c  udp_server_rm_client.c  udp_server_run.c  udp_server_send_msg.c  udp_server_sendto.c
labs/lab1/: Makefile
labs/lab1/client/include/: udp_client.h
labs/lab1/client/src/: udp_client.c
labs/lab1/server/include/: net_utils.h  udp_server.h
labs/lab1/server/src/: net_utils.c  udp_server.c
labs/lab2/: Makefile
labs/lab2/client/: main.c
labs/lab2/client/include/: tcp_client.h
labs/lab2/client/src/: tcp_client.c
labs/lab2/server/: main.c
labs/lab2/server/include/: mp_tcp_server.h  strupper.h  zombie_reaper.h
labs/lab2/server/src/: mp_tcp_server.c
labs/lab3/: Makefile
labs/lab3/client/include/: tcp_client.h
labs/lab3/client/src/: tcp_client.c
labs/lab3/server/: main.c
labs/lab3/server/include/: mt_tcp_server.h  str_utils.h
labs/lab3/server/src/: mt_tcp_server.c  (+1 more)
labs/lab4/: Makefile
labs/lab4/client/: client.c
labs/lab4/server/: server.c
(+2 files in other folders)
